Remove no-longer-sensical check when a device was added

Leave around some potentially useful debug messages.

BUG: 302308